--- a/app/src/main/res/xml/pref_visualizer.xml
+++ b/app/src/main/res/xml/pref_visualizer.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <CheckBoxPreference
         android:defaultValue="@bool/pref_show_bass_default"
@@ -30,6 +32,7 @@
         android:defaultValue="@string/pref_size_default"
         android:key="@string/pref_size_key"
         android:title="@string/pref_size_label"
+        android:inputType="number"
         />
 
     <ListPreference
